# TIDAR

./: .gitignore  README.md  camera_primesense.json  kitti_stereo_test.py  main_calibrate_velo_cam.py  main_helpers.py  main_optitrack_L515.py  main_stereo_run.py  main_stereo_velo_results.py  main_test_cam_rectification.py  main_velo_stepper.py  main_velo_stepper_ctrl.py  main_velo_stepper_ctrl.py.py  multicam_config.ini  multicam_config.json  multiway_registration.pcd  run_commands.md  runn.sh  test22.npz
calibfiles/: multicam_config.ini  multicam_config.json  velo_cam_calib.pkl  velo_step_calib.pkl  velo_step_poses.pkl
camerahardware/: TIS.py  TIScamCalibrator.py  TIScamreaders.py  TIScamsaver.py  TIScamsaver_calibrator.py  a4  blobdetector_setup.py  calib_codes.py  calibration_from_images.py  cameras.json  object_points.py  super_resolution.onnx  velodynecalib.py
dataloader/: KITTIloader2012.py  KITTIloader2015.py  MiddleburyLoader.py  kittimot_dataset.py  kittiobject_dataset.py  kittiodometry.py  kittitracking.py  kittiutils.py  voc_dataset.py
hardware/: TIS.py  TIScamreaders.py  TIScamsaver.py  calibration.py  cameras.json  run_commands.md
sgm/: disparity_method.h
shipTracking/: SN16717641.conf  depth_sensing.py  make_fragments.py  multiway.py  pointcloud_daa.py  realsense.json  realsense_saver.py  realsenselidar.py  reconsruct_full_3D.py  register_fragments.py  show_fragments.py  zed_depth_sensing.py
shipTracking_v2/: register_fragments.py
stereocodes/SGMpython/: CMakeLists.txt  gpu_library.cu  libsgm_stereo.cu  main_opencv_test.cpp  opencv_stereo.cu  opencvtest  stereosgm_image.cpp  test_mul.sublime-project  test_mul.sublime-workspace
stereocodes/SGMpython/include/: libsgm_stereo.h  opencv_stereo.h
stereocodes/sgm/: sgm  (+3 more)
(+116 files in other folders)
